[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Hole.tscn" type="PackedScene" id=3]
[ext_resource path="res://Diamond.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 2 )
Hole = ExtResource( 3 )
Diamond = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
light_mask = 524289
position = Vector2( 461.64, 280.986 )
z_index = 1

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DiamondTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 461.567, 281.783 )
scale = Vector2( 512, 300 )

[node name="HUD" parent="." instance=ExtResource( 5 )]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="DiamondTimer" to="." method="_on_DiamondTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
